--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-basics",
   "version": "1.0.0",
   "description": "This is a proj where I used for the learning / brushing up my react skills",
-  "main": "app.js",
   "scripts": {
     "test": "jest"
   },
@@ -22,6 +21,14 @@
   },
   "homepage": "https://github.com/srinivasan-r23/react#readme",
   "devDependencies": {
-    "parcel": "^2.11.0"
-  }
+    "parcel": "^2.11.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
